turtleart.square.Square.scala.error
Compilation error:
Square:2: error: overloaded method value right with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  forward(200); right(90); forward(200); right(90); forward(200); right(90); forward(200); right();
                                                                                           ^